fix: use ParallelGC for better overall performance on Linux